@@ -66,6 +66,9 @@ void print_usage()
 		"OPTIONS:\n"
 		"-m          generate a merkle hash tree torrent.\n"
 		"            merkle torrents require client support\n"
+		"-f          include sha-1 file hashes in the torrent\n"
+		"            this helps supporting mixing sources from\n"
+		"            other networks\n"
 		"-w url      adds a web seed to the torrent with\n"
 		"            the specified url\n"
 		"-t url      adds the specified tracker to the\n"
@@ -143,6 +146,9 @@ int main(int argc, char* argv[])
 				case 'o':
 					++i;
 					outfile = argv[i];
+					break;
+				case 'f':
+					flags |= create_torrent::calculate_file_hashes;
 					break;
 				default:
 					print_usage();
